# steam-screenshot-downloader

./: LICENSE  README.md  pyproject.toml
steam_screenshot_downloader/: downloader.py
