[tool.poetry]
name = "steam-screenshot-downloader"
version = "0.1.0"
description = ""
authors = ["Vladimir Leshkevich <asteropheum@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"


[tool.poetry.dev-dependencies]
Nuitka = "^1.1.6"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
